--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
+    "vue-hljs": "^1.1.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
